--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+        <title>Contact - Forrest Herman - Wedding Photographer + Filmmaker</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
         <meta
@@ -77,47 +77,47 @@
     <body>
         <div class="fh5co-loader"></div>
 
-        <div id="page">
-            <nav id="navbar" class="fh5co-nav nav-light" role="navigation">
-                <div class="container">
-                    <div id="nav" class="row nav">
-                        <div class="col-xs-2 col-nav">
-                            <div id="fh5co-logo">
-                                <a href="index.html">
-                                    <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-10 text-right menu-1">
-                            <ul id="nav-menu" class="nav-menu">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">Hello</a></li>
-                                <li>
-                                    <a href="photos.html">Photos</a>
-                                    <!-- <ul class="dropdown">
-										<li><a href="#">Web Design</a></li>
-										<li><a href="#">eCommerce</a></li>
-										<li><a href="#">Branding</a></li>
-										<li><a href="#">API</a></li>
-									</ul> -->
-                                </li>
-                                <li>
-                                    <a href="films.html">Films</a>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </nav>
+        <nav id="navbar" class="fh5co-nav" role="navigation">
+			<!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
+			<div class="container">
+				<div id="nav" class="row nav nav-white">
+					<div class="col-xs-2 col-nav">
+						<div id="fh5co-logo">
+							<a href="index.html">
+								<img id="logo" src="img/forrest-herman-white.png" alt="logo" />
+							</a>
+						</div>
+					</div>
+					<div class="col-xs-10 text-right menu-1">
+						<ul id="nav-menu" class="nav-menu">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">Hello</a></li>
+							<li>
+								<a href="photos.html">Photos</a>
+								<!-- <ul class="dropdown">
+									<li><a href="#">Web Design</a></li>
+									<li><a href="#">eCommerce</a></li>
+									<li><a href="#">Branding</a></li>
+									<li><a href="#">API</a></li>
+								</ul> -->
+							</li>
+							<li>
+								<a href="films.html">Films</a>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
 
             <header
                 id="fh5co-header"
                 class="fh5co-cover fh5co-cover-sm"
                 role="banner"
-                style="background-image: url(img/2020-08-18\ A7300337-2.jpg); background-size: cover"
+                style="background-image: url(/img/Couple_ErinMike_Banner_001.jpg)"
             >
-                <div class="overlay"></div>
+                <div class="overlay overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
@@ -265,7 +265,7 @@
                                 <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                                 <br />
                                 <a
-                                    href="mailto:forrestherman.photography@gmail.com?subject='Forrest Herman — Wedding Photographer + Filmmaker Inquiry'"
+                                    href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"
                                 >
                                     forrestherman.photography@gmail.com
                                 </a>
@@ -275,17 +275,17 @@
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="https://www.instagram.com/forrestherman/"
+                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"
                                             ><i class="icon-instagram"></i
                                         ></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography"
+                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"
                                             ><i class="icon-facebook"></i
                                         ></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/"
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"
                                             ><i class="icon-pinterest"></i
                                         ></a>
                                     </li>
