--- a/footerStickyNotif.html
+++ b/footerStickyNotif.html
@@ -1,7 +1,7 @@
 <div class="sticky-footer hidden">
     <div id="sticky-footer-bar" class="row">
         <h4 class="sticky-footer-text">
-            Now booking 2021 & 2022 weddings! <a href="/contact.html">Book your date today!</a>
+            <a href="/contact.html">Now booking 2021 & 2022 weddings! Book your date today!</a>
         </h4>
     </div>
 </div>
