--- a/about.html
+++ b/about.html
@@ -8,13 +8,10 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+        <title>About - Forrest Herman - Wedding Photographer + Filmmaker</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-        <meta
-            name="keywords"
-            content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive"
-        />
+        <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
         <meta name="author" content="FREEHTML5.CO" />
 
         <!-- Facebook and Twitter integration -->
@@ -28,11 +25,7 @@
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
 
-        <link
-            href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700"
-            rel="stylesheet"
-            type="text/css"
-        />
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
 
         <!-- Animate.css -->
@@ -67,35 +60,89 @@
         <div class="fh5co-loader"></div>
 
         <div id="page">
-            <!--Navigation bar-->
-            <div id="nav-placeholder"></div>
+            <!-- ****************************************** White Nav ****************************************** -->
 
-            <script>
-                $(function () {
-                    $("#nav-placeholder").load("nav.html")
-                })
-            </script>
-            <!--end of Navigation bar-->
+            <nav id="navbar" class="fh5co-nav" role="navigation">
+                <!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
+                <div class="container">
+                    <div id="nav" class="row nav nav-white">
+                        <div class="col-xs-2 col-nav">
+                            <div id="fh5co-logo">
+                                <a href="index.html">
+                                    <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xs-10 text-right menu-1">
+                            <ul id="nav-menu" class="nav-menu">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">Hello</a></li>
+                                <li>
+                                    <a href="photos.html">Photos</a>
+                                    <!-- <ul class="dropdown">
+										<li><a href="#">Web Design</a></li>
+										<li><a href="#">eCommerce</a></li>
+										<li><a href="#">Branding</a></li>
+										<li><a href="#">API</a></li>
+									</ul> -->
+                                </li>
+                                <li>
+                                    <a href="films.html">Films</a>
+                                </li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
 
             <!--Footer notif bar-->
             <div id="footer-placeholder"></div>
             <!--end of Footer notif bar-->
 
-            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner">
-                <div class="overlay-light"></div>
+            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" style="background-image: url('img/DundurnCastle_004.jpg')" role="banner">
+                <!-- <div class="overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="display-t">
                                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                    <h1>About Me</h1>
+                                    <h1>Hello</h1>
                                     <h2>Let's be friends!</h2>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </header>
+
+            <div class="row fh5co-section">
+                <div class="container">
+                    <div class="row no-margin">
+                        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading animate-box">
+                            <span>About Me</span>
+                            <h2>Hey, I'm Forrest</h2>
+                            <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I hope to get the chance to meet you. First, a bit about me.</p>
+                            <p>
+                                I'm passionate about photography (I know right? Who would have guessed!) and have been honing my skills for the past 5 years, and love the creative freedom and
+                                documentary aspect.
+                            </p>
+                            <p>But, enough about me, let's hear from you!</p>
+                            <div class="btn-container btn-border-black display-flex-row justify-center">
+                                <a class="btn" href="/contact.html">Let's chat!</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row no-margin flex-row">
+                        <div class="col-sm-6 img-container">
+                            <img class="about-img" src="img/DundurnCastle_001.jpg" alt="" />
+                        </div>
+                        <div class="col-sm-6 img-container">
+                            <img class="about-img" src="img/DundurnCastle_009.jpg" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <!-- <div id="fh5co-couple" class="fh5co-section-gray">
                 <div class="container">
@@ -263,30 +310,20 @@
                                 Forrest Herman
                                 <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                                 <br />
-                                <a
-                                    href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"
-                                >
-                                    forrestherman.photography@gmail.com
-                                </a>
+                                <a href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.photography@gmail.com </a>
                                 <br />
                                 (705) 203-2534
                             </p>
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"
-                                            ><i class="icon-instagram"></i
-                                        ></a>
+                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="icon-instagram"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"
-                                            ><i class="icon-facebook"></i
-                                        ></a>
+                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="icon-facebook"></i></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"
-                                            ><i class="icon-pinterest"></i
-                                        ></a>
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="icon-pinterest"></i></a>
                                     </li>
                                 </ul>
                             </div>
