added fh logo favicon and more
- footer logo
- footer alert bar to photos page
- changed accent color

--- a/photos.html
+++ b/photos.html
@@ -343,6 +343,15 @@
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
 
+        <!--Footer notif bar-->
+        <div id="footer-placeholder"></div>
+        <!--end of Footer notif bar-->
+        <script>
+            $(function () {
+                $("#footer-placeholder").load("footerStickyNotif.html")
+            })
+        </script>
+
         <!-- jQuery -->
         <script src="js/jquery.min.js"></script>
         <!-- jQuery Easing -->
