--- a/about.html
+++ b/about.html
@@ -96,11 +96,7 @@
                 </div>
             </nav>
 
-            <!--Footer notif bar-->
-            <div id="footer-placeholder"></div>
-            <!--end of Footer notif bar-->
-
-            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" style="background-image: url('img/DundurnCastle_004.jpg')" role="banner">
+            <header id="fh5co-header" class="fh5co-cover cover-about fh5co-cover-sm" style="background-image: url('img/DundurnCastle_004.jpg')" role="banner">
                 <!-- <div class="overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
@@ -338,6 +334,9 @@
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
 
+        <!--Footer notif bar-->
+        <div id="footer-placeholder"></div>
+        <!--end of Footer notif bar-->
         <script>
             $(function () {
                 $("#footer-placeholder").load("footerStickyNotif.html")
