--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Forrest Herman &ndash; Wedding Photographer + Filmmaker</title>
+        <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+        <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
         <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
@@ -30,8 +32,10 @@
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link href="https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&display=swap" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+            rel="stylesheet"
+        />
 
         <!-- Animate.css -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"/> -->
@@ -130,11 +134,11 @@
                             <img class="about-img" src="img/DundurnCastle_010.jpg" alt="" />
                         </div>
                         <div class="col-sm-1"></div>
-                        <div class="col-sm-5 order-sm-1 text-left animate-box flex-col justify-center">
-                            <h2>Hey there!</h2>
+                        <div class="col-sm-5 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center">
+                            <h2 style="font-family: DM Serif Display, serif; letter-spacing: 1px">Hey there, I'm Forrest!</h2>
                             <p>Welcome to my home, I'm so excited to meet you.</p>
                             <p>I'm Forrest, a photographer and filmmaker dedicated to capturing visuals as timeless as your memories.</p>
-                            <div class="btn-container btn-border-black display-flex-row">
+                            <div class="btn-container btn-border-black display-flex-row mobile-justify-center">
                                 <a class="btn" href="/about.html">More about me</a>
                             </div>
                         </div>
@@ -566,6 +570,11 @@
             <!-- Page Footer -->
             <footer id="fh5co-footer" role="contentinfo">
                 <div class="container">
+                    <div class="footer-logo img-container display-flex-row justify-center">
+                        <a href="index.html">
+                            <img id="footer-logo" src="img/forrest-herman-black.png" alt="logo" />
+                        </a>
+                    </div>
                     <div class="row copyright">
                         <div class="col-md-12 text-center">
                             <p>
