added insta callout and updated footer
-instagram callout
-footer updates

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 </div>
             </div>
 
-            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(images/img_bg_4.jpg)">
+            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row animate-box">
@@ -587,7 +587,7 @@
                                 <br />
                                 <a href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.photography@gmail.com </a>
                                 <br />
-                                (705) 203-2534
+                                <a href="tel:7052032534"> (705) 203-2534</a>
                             </p>
                             <div>
                                 <ul class="fh5co-social-icons">
