--- a/about.html
+++ b/about.html
@@ -293,9 +293,30 @@
                 </div>
             </div> -->
 
+            <!-- ****************************************** Insta callout ****************************************** -->
+
+            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
+                <div class="overlay"></div>
+                <div class="container">
+                    <div class="row animate-box">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading insta-callout">
+                            <h2>Check Out My Instagram</h2>
+                            <h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ****************************************** Footer ****************************************** -->
+
             <!-- Page Footer -->
             <footer id="fh5co-footer" role="contentinfo">
                 <div class="container">
+                    <div class="footer-logo img-container display-flex-row justify-center">
+                        <a href="index.html">
+                            <img id="footer-logo" src="img/forrest-herman-black.png" alt="logo" />
+                        </a>
+                    </div>
                     <div class="row copyright">
                         <div class="col-md-12 text-center">
                             <p>
@@ -308,7 +329,7 @@
                                 <br />
                                 <a href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.photography@gmail.com </a>
                                 <br />
-                                (705) 203-2534
+                                <a href="tel:7052032534"> (705) 203-2534</a>
                             </p>
                             <div>
                                 <ul class="fh5co-social-icons">
@@ -320,6 +341,9 @@
                                     </li>
                                     <li>
                                         <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="icon-pinterest"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="icon-youtube"></i></a>
                                     </li>
                                 </ul>
                             </div>
