added hr to instagram callout

--- a/about.html
+++ b/about.html
@@ -301,6 +301,7 @@
                     <div class="row animate-box">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading insta-callout">
                             <h2>Check Out My Instagram</h2>
+                            <hr class="mdash-hr" />
                             <h4><a href="https://www.instagram.com/forrestherman/" target="_blank">@forrestherman</a></h4>
                         </div>
                     </div>
